# edspdf

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CITATION.cff  README.md  changelog.md  contributing.md  coverage.txt  mkdocs.yml  pyproject.toml  roadmap.md  versions.json
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: documentation.yml  release.yml  tests.yml
demo/: app.py  index.html  requirements.txt
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/alternatives/: index.html
dev/changelog/: index.html
dev/components/: index.html
dev/concepts/: index.html
dev/contributing/: index.html
dev/layers/: index.html
dev/recipes/: index.html
dev/reference/: index.html
dev/roadmap/: index.html
dev/search/: search_index.json
dev/utilities/: index.html
docs/: alternatives.md  changelog.md  concepts.md  configuration.md  contributing.md  data-structures.md  index.md  inference.md  pipeline.md  rationale.md  roadmap.md  trainable-pipes.md
docs/components/: index.md
docs/concepts/: configuration.md  index.md  pipeline.md  trainable-components.md
docs/layers/: box-transformer-layer.md  box-transformer.md  index.md  relative-attention.md  sinusoidal-embedding.md  vocabulary.md
docs/modules/: aggregation.md  index.md  transforms.md
docs/pipes/: index.md
docs/recipes/: annotation.md  extension.md  index.md  rule-based.md  rules.md  sklearn.md  training.md
docs/user-guide/: extraction.md  index.md
docs/utilities/: alignment.md  index.md  visualisation.md
edspdf/: __init__.py  cli.py  component.py  config.py  lazy_collection.py  loading.py  model.py  optimization.py  pipeline.py  reg.py  registry.py  structures.py  trainable_pipe.py
edspdf/accelerators/: base.py  multiprocessing.py  simple.py
edspdf/aggregation/: __init__.py  base.py  factory.py  functional.py  simple.py  styled.py
edspdf/aggregators/: functional.py  simple.py  styled.py
edspdf/classification/: __init__.py  align.py  base.py  dummy.py  factory.py  mask.py  random.py  sklearn.py
edspdf/classifiers/: sklearn.py
edspdf/components/: __init__.py
edspdf/data/: __init__.py  base.py  converters.py  files.py  pandas.py  parquet.py
edspdf/extraction/: __init__.py  base.py  extractor.py  factory.py  functional.py  models.py  pdfminer.py
edspdf/layers/: __init__.py  block_transformer.py  box_embedding.py  box_layout_embedding.py  box_layout_preprocessor.py  box_preprocessor.py  box_text_embedding.py  box_transformer.py  cnn_encoder.py  cnn_pooler.py  relative_attention.py  sinusoidal_embedding.py  text_box_embedding.py  text_embedding.py  vocabulary.py
edspdf/metadata/: date_transformation.py  extract_date.py  regex.py
edspdf/misc/: __init__.py  package.py
edspdf/models/: __init__.py  box.py  config.py  doc.py  enums.py  style.py  text_box.py
edspdf/processing/: __init__.py  multiprocessing.py  simple.py  utils.py
edspdf/readers/: reader.py
edspdf/reading/: __init__.py  factory.py  reader.py
edspdf/recipes/: train.py
edspdf/transforms/: __init__.py  base.py  factory.py  transforms.py
edspdf/utils/: alignment.py  collections.py  functional.py  optimization.py  package.py  random.py  registry.py  torch.py
edspdf/visualization/: __init__.py  annotations.py  merge.py
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/alternatives/: index.html
latest/changelog/: index.html
latest/configuration/: index.html
latest/contributing/: index.html
latest/data-structures/: index.html
latest/inference/: index.html
latest/layers/: index.html
latest/modules/: index.html
latest/pipeline/: index.html
latest/pipes/: index.html
latest/recipes/: index.html
latest/reference/: index.html
latest/roadmap/: index.html
latest/search/: search_index.json
latest/utilities/: index.html
main/: 404.html  index.html  objects.inv
main/alternatives/: index.html
main/changelog/: index.html
main/configuration/: index.html
main/contributing/: index.html
main/data-structures/: index.html
main/inference/: index.html
main/layers/: index.html
main/pipeline/: index.html
main/pipes/: index.html
main/recipes/: index.html
main/roadmap/: index.html
main/scripts/: bibtex.py  plugin.py
main/search/: search_index.json
main/trainable-pipes/: index.html
main/utilities/: index.html
master/: 404.html  index.html  objects.inv
master/alternatives/: index.html
master/changelog/: index.html
master/concepts/: index.html
master/contributing/: index.html
master/modules/: index.html
master/recipes/: index.html
master/reference/: index.html
master/roadmap/: index.html
master/search/: search_index.json
master/utilities/: index.html
tests/: conftest.py  test_conf.py  test_loading.py  test_version.py  utils.py
tests/aggregation/: test_simple.py  test_styled.py
tests/classification/: conftest.py  test_align.py  test_dummy.py  test_mask.py  test_random.py  test_sklearn.py
tests/core/: config.cfg  test_config.py  test_data.py  test_pipeline.py  test_registry.py  test_structures.py
tests/extraction/: test_functional.py  test_style.py
tests/metadata/: test_date.py  test_regex.py
tests/misc/: test_package_resources.py
tests/reader/: test_reader.py
tests/recipes/: config.cfg  test_markdown_aggregator.py  test_train.py
tests/utils/: test_package.py  test_py_utils.py  test_torch_utils.py
tests/visualization/: test_annotations.py  test_merge.py
v0.10.0/: index.html
v0.10.0/inference/: index.html
v0.10.0/trainable-pipes/: index.html
v0.5.0/: objects.inv
v0.5.0/concepts/: index.html
v0.5.0/contributing/: index.html
v0.5.0/recipes/: index.html
v0.5.0/reference/: index.html
v0.5.0/roadmap/: index.html
v0.5.0/search/: search_index.json
v0.5.1/: 404.html  index.html
v0.5.1/alternatives/: index.html
v0.5.1/changelog/: index.html
v0.5.1/contributing/: index.html
v0.7.0/: 404.html  index.html  objects.inv  references.bib
v0.7.0/layers/: index.html
v0.8.1/: 404.html  index.html
v0.9.0/: index.html  objects.inv
v0.9.1/: index.html
v0.9.2/: objects.inv
(+800 files in other folders)
